RESOLVED FIXED191209
Mac production builds should sign the network process xpc service with entitlements
https://bugs.webkit.org/show_bug.cgi?id=191209
Summary Mac production builds should sign the network process xpc service with entitl...
Alex Christensen
Reported 2018-11-02 14:22:47 PDT
Mac production builds should sign the network process xpc service with entitlements
Attachments
Patch (11.98 KB, patch)
2018-11-02 14:28 PDT, Alex Christensen
no flags
Archive of layout-test-results from ews107 for mac-sierra-wk2 (93.17 KB, application/zip)
2018-11-02 15:19 PDT, EWS Watchlist
no flags
Patch (14.69 KB, patch)
2018-11-03 06:43 PDT, Alex Christensen
no flags
Patch (14.78 KB, patch)
2018-11-03 07:38 PDT, Alex Christensen
no flags
Alex Christensen
Comment 1 2018-11-02 14:28:07 PDT
EWS Watchlist
Comment 2 2018-11-02 14:31:36 PDT
Attachment 353731 [details] did not pass style-queue: ERROR: Tools/TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:3584: developmentRegion is not en. [xcodeproj/settings] [5] Total errors found: 1 in 9 files If any of these errors are false positives, please file a bug against check-webkit-style.
Geoffrey Garen
Comment 3 2018-11-02 14:53:00 PDT
Comment on attachment 353731 [details] Patch r=me
EWS Watchlist
Comment 4 2018-11-02 15:19:53 PDT
Comment on attachment 353731 [details] Patch Attachment 353731 [details] did not pass mac-wk2-ews (mac-wk2): Output: https://webkit-queues.webkit.org/results/9836500 Number of test failures exceeded the failure limit.
EWS Watchlist
Comment 5 2018-11-02 15:19:54 PDT
Created attachment 353736 [details] Archive of layout-test-results from ews107 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
Alex Christensen
Comment 6 2018-11-02 17:34:59 PDT
Cannot reproduce test failures. http://trac.webkit.org/r237761
Radar WebKit Bug Importer
Comment 7 2018-11-02 17:35:23 PDT
Alex Christensen
Comment 8 2018-11-02 23:26:30 PDT
Test failures were legit, rolled out in r237769
mitz
Comment 9 2018-11-02 23:42:58 PDT
Comment on attachment 353731 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=353731&action=review > Source/WebKit/Configurations/NetworkService.xcconfig:35 > +CODE_SIGN_ENTITLEMENTS_COCOA_TOUCH_NO = Configurations/Network-OSX-sandbox.entitlements; This should point to a (new) Network-OSX.entitlements. The existing Network-OSX-sandbox.entitlements gets merged in by the process-network-sandbox-entitlements.sh script iff restricted entitlements are allowed.
Alex Christensen
Comment 10 2018-11-03 06:43:11 PDT
EWS Watchlist
Comment 11 2018-11-03 06:48:20 PDT
Attachment 353770 [details] did not pass style-queue: ERROR: Tools/TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:3584: developmentRegion is not en. [xcodeproj/settings] [5] Total errors found: 1 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Alex Christensen
Comment 12 2018-11-03 07:38:12 PDT
EWS Watchlist
Comment 13 2018-11-03 07:41:22 PDT
Attachment 353772 [details] did not pass style-queue: ERROR: Tools/TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:3584: developmentRegion is not en. [xcodeproj/settings] [5] Total errors found: 1 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Alex Christensen
Comment 14 2018-11-03 08:23:27 PDT
Note You need to log in before you can comment on or make changes to this bug.