Mac production builds should sign the network process xpc service with entitlements https://bugs.webkit.org/show_bug.cgi?id=191209 <rdar://problem/45377609>

Reviewed by Geoff Garen.

Source/WebKit:

* Configurations/NetworkService.xcconfig:
Set CODE_SIGN_ENTITLEMENTS_COCOA_TOUCH_NO like we do for the web process,
except with the corresponoding network process entitlements file.
* UIProcess/API/Cocoa/WKProcessPool.mm:
(-[WKProcessPool _networkProcessHasEntitlementForTesting:]):
* UIProcess/API/Cocoa/WKProcessPoolPrivate.h:
* UIProcess/Cocoa/WebProcessPoolCocoa.mm:
(WebKit::WebProcessPool::networkProcessHasEntitlementForTesting):
* UIProcess/WebProcessPool.h:
Add infrastructure to test that the network process actually has an entitlement.

Tools:

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKitCocoa/NetworkProcess.mm: Added.
(TEST):



Canonical link: https://commits.webkit.org/206020@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237761 268f45cc-cd09-0410-ab3c-d52691b4dbfc