Source/WebKit/UIProcess/API/Cocoa/WKProcessPool.mm
@@ -584,6 +584,11 @@ static NSDictionary *policiesHashMapToDictionary(const HashMap<String, HashMap<S
     return [array autorelease];
 }
 
+- (BOOL)_networkProcessHasEntitlementForTesting:(NSString *)entitlement
+{
+    return _processPool->networkProcessHasEntitlementForTesting(entitlement);
+}
+
 @end
 
 #endif // WK_API_ENABLED
