Source/WebKit/UIProcess/WebProcessPool.h
@@ -216,6 +216,7 @@ public:
 
     ProcessID networkProcessIdentifier();
     Vector<String> activePagesOriginsInWebProcessForTesting(ProcessID);
+    bool networkProcessHasEntitlementForTesting(const String&);
 
     WebPageGroup& defaultPageGroup() { return m_defaultPageGroup.get(); }
 
